Correction- Overflow-x instead of full

--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ body {
     background-color: var(--baby-powder);
     padding: 4vw;
     font-family: 'Lato', sans-serif;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 p {
